--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-testing-library": "^6.3.0",
     "eslint-plugin-unused-imports": "^4.1.3",
     "eslint-plugin-vitest": "^0.5.4",
+    "globals": "^15.9.0",
     "husky": "^9.1.5",
     "jsdom": "^24.1.1",
     "lint-staged": "^15.2.9",
